<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kumva</string>
    <string name="str_go">Go</string>
    <string name="str_searchhint">%1$s or %2$s</string>
    <string name="str_about">About</string>
    <string name="str_pleasewait">Please wait...</string>
    <string name="str_searching">Searching</string>
    <string name="str_noresults">No matches - try removing prefixes</string>
    <string name="str_entrydetails">Entry details</string>
    <string name="wcls_abbr">Abbreviation</string>
    <string name="wcls_adj">Adjective</string>
    <string name="wcls_adv">Adverb</string>
    <string name="wcls_conj">Conjunction</string>
    <string name="wcls_dem">Demonstrative</string>
    <string name="wcls_int">Interjection</string>
    <string name="wcls_n">Noun</string>
    <string name="wcls_nm">Noun modifier</string>
    <string name="wcls_phr">Phrase</string>
    <string name="wcls_pn">Proper noun</string>
    <string name="wcls_prep">Preposition</string>
    <string name="wcls_pro">Pronoun</string>
    <string name="wcls_v">Verb</string>
    <string name="wcls_vm">Verb modifier</string>
    <string name="str_dictionaries">Dictionaries</string>
    <string name="str_remove">Remove</string>
    <string name="str_save">Save</string>
    <string name="str_discard">Discard</string>
    <string name="str_class">Class</string>
    <string name="str_classes">Classes</string>
    <string name="str_add">Add</string>
    <string name="str_update">Update</string>
    <string name="str_fetching">Fetching</string>
    <string name="str_newdictionary">New dictionary</string>
    <string name="str_siteurl">Site URL</string>
    <string name="str_error">Error</string>
    <string name="str_listen">Listen</string>
    <string name="str_maximumresults">Maximum results</string>
    <string name="str_pronunciation">Pronunciation</string>
    <string name="str_meaning">Meaning</string>
    <string name="str_examples">Examples</string>
    <string name="str_derivation">Derivation</string>
    <string name="str_nodictionary">No dictionary</string>
    <string name="str_preferences">Preferences</string>
    <string name="str_bysuggestion">Showing results for <b>%1$s</b></string>
    <string name="err_communicationfailed">Failed to communicate with server</string>
    <string name="err_nodictionary">There is no active dictionary</string>
    <string name="err_numberrange">Must be between %1$d and %2$d</string>
    <string name="err_dictloading">Unable to load dictionaries</string>
    <string name="err_dictduplicate">Dictionary with that URL already exists</string>
</resources>
