<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
    	android:id="@+id/entrytitle" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:background="#9db272"
    	android:text="@string/str_entrydetails"
    	android:textColor="#334422"
    	android:textStyle="bold"
    	android:textSize="20sp"
    	android:padding="10dp">
    </TextView>
    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <LinearLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="1"
		    	android:orientation="horizontal"
		    	android:padding="10dp">
				<TextView
				    android:id="@+id/prefix"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				 	android:textStyle="bold"
				    android:paddingRight="0dp"
				    android:textSize="16sp"
				    android:textColor="#BBBBFF" >
				</TextView>
				<TextView
				    android:id="@+id/lemma"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				 	android:textStyle="bold"
				    android:paddingRight="2dp"
				    android:textSize="16sp"
				    android:textColor="#BBFFBB" >
				</TextView>
				<TextView
				    android:id="@+id/modifier"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				 	android:textStyle="bold"
				    android:paddingLeft="2dp"
				    android:textSize="16sp" >
				</TextView>
			</LinearLayout>
			<!-- =============== Pronunciation section ============== -->
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/str_pronunciation"
			    android:padding="3sp"
			    android:background="#888888"
			    android:textSize="12sp"
			    android:textStyle="bold"
			    android:textColor="#333333">
			</TextView>
			<LinearLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="1"
		    	android:orientation="horizontal"
		    	android:padding="10dp">
				<TextView
				    android:id="@+id/pronunciation"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:paddingRight="5dp"
				    android:textSize="14sp" >
				</TextView>
				<Button
					android:id="@+id/audiobtn"
					android:text="@string/str_listen" 
					android:gravity="left|center_vertical"
					android:drawableLeft="@drawable/ic_listen"
					android:drawablePadding="4sp"
			        android:layout_height="wrap_content" 
			        android:layout_width="wrap_content"
			        android:onClick="playAudio">
				</Button>
			</LinearLayout>
			<!-- =============== Meaning section =============== -->
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/str_meaning"
			    android:padding="3sp"
			    android:background="#888888"
			    android:textSize="12sp"
			    android:textStyle="bold"
			    android:textColor="#333333">
			</TextView>
			<TextView
			    android:id="@+id/wordclass"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="10dp"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp"
			    android:textStyle="italic"
			    android:textSize="14sp" >
			</TextView>
			<TextView
			    android:id="@+id/meaning"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dp"
			    android:textSize="14sp" >
			</TextView>
			<TextView
			    android:id="@+id/comment"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingBottom="10dp"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp"
			    android:textSize="14sp" >
			</TextView>
			<!-- =============== Examples section =============== -->
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/str_examples"
			    android:padding="3sp"
			    android:background="#888888"
			    android:textSize="12sp"
			    android:textStyle="bold"
			    android:textColor="#333333">
			</TextView>
			<TextView
			    android:id="@+id/examples"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dp"
			    android:textColor="#d2cda6"
			    android:textSize="14sp" >
			</TextView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
